[Model] ChangesHandler update